--- a/adv_css/css/responsivefinal.css
+++ b/adv_css/css/responsivefinal.css
@@ -61,7 +61,7 @@ header{
   font-size: 60px;
   text-align: center;
   background-color: #0A1626;
-  width: 20px auto;
+  width: 20px;
   line-height: 300%;
 }
 a{
@@ -138,7 +138,7 @@ header h1{
     text-align: center;
     background-color: #0A1626;
     width: 200px;
-    height: 50;
+    height: 50px;
     line-height: 50;
     text-decoration: none;
     font-weight: 700;
@@ -147,7 +147,7 @@ header h1{
 }
 img{
   width: 100%;
-  padding: 20px auto;
+  padding: 20px 20px;
 }
 
 
@@ -175,48 +175,73 @@ ul li a{
 /*tablet*/
 
 @media (min-width: 786px){
-    /*Global Styles*/ 
-  body { 
+
+     /*Global Styles*/ 
+     body { 
     
-    background-color: #fff;
-    
-        }
-    
-        main{
-          padding: 20px;
-          border-top-left-radius: 20px;;
-        }
-        p{
-          margin: 9%;
-          font-size: 130%;
-        }
+      background-color: #fff;
+      
+          }
+          
+      
+          main{
+            padding: 20px;
+            border-top-left-radius: 20px;;
+          }
+          p{
+            margin: 9%;
+            font-size: 130%;
+          }
+  
+          h1{ font-size: 90px;
+          
+            text-align: center;
+           }
 
-        h1{ font-size: 90;
-         }
-
-         nav {
-          display: block;
-          text-align: center;
-          font-size: small;
-
-         }
-
-         header  {
-          font-size: 80px;
-         }
-
-         img {
-          padding: 40px auto;
-         }
-        }
-    
+           header{
+            text-align: center;
+            display: block;
+            background-color: #0A1626;
+            width: 900px;
+       
+           }
+  
+           nav {
+            display: block;
+            text-align: center;
+            font-size: small;
+  
+           }
+  
+           header  {
+            font-size: 80px;
+           }
+  
+           img {
+            padding: 40px 20px;
+            width: 300px;
+           }
+  
+}
+ 
+        
         /*Desktop styles*/
         @media (min-width: 1024px){
 
           nav{
             background-color: #0A1626;
+            font-size: 200px;
 
             
+          }
+
+          img {
+            padding: 20px 20px;
+            width: 580px;
+          }
+
+          #container {
+            padding: 20px 20px;
           }
           nav li a{
             font-size: 44px;
@@ -226,7 +251,8 @@ ul li a{
 
           nav li a:hover{
             color: #A64B37;
-            text-align: center;
+            
+            font-style: italic;
           }
 
           a{
@@ -246,7 +272,7 @@ ul li a{
            background-color: #A64B37;
            text-decoration: none;
            font-family: Arial, Helvetica, sans-serif;
-           font-style: bold;
+        
            margin: 2px 2px;
            border-radius: 10px;
            text-align: center;
@@ -254,13 +280,8 @@ ul li a{
           
           }
           
-
-         
-  
-
-
-
         }
 
-       
-  
+         
+        
+      
