--- a/adv_css/css/responsivefinal.css
+++ b/adv_css/css/responsivefinal.css
@@ -61,7 +61,7 @@ header{
   font-size: 60px;
   text-align: center;
   background-color: #0A1626;
-  width: 20px;
+  width: 100%;
   line-height: 300%;
 }
 a{
@@ -87,7 +87,7 @@ main{
 /*mobile (first of course) */
 nav{
     background-color: #0A1626;
-    padding: 15px;
+   
     text-align: center;
     font-size: 10px;
 
@@ -207,7 +207,7 @@ ul li a{
            }
   
            nav {
-            display: block;
+           
             text-align: center;
             font-size: small;
   
@@ -235,6 +235,10 @@ ul li a{
             
           }
 
+          header{
+            width: 100%;
+          }
+
           img {
             padding: 20px 20px;
             width: 580px;
@@ -252,7 +256,7 @@ ul li a{
           nav li a:hover{
             color: #A64B37;
             
-            font-style: italic;
+            
           }
 
           a{
